k8s/spark-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
spec:
  replicas: 1 # Adjust as needed
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics/prometheus' # Spark Prometheus metrics path
        prometheus.io/port: '8081' # Spark Worker UI and Prometheus metrics port
        prometheus.io/scrape_custom: 'true'
        prometheus.io/path_custom: '/metrics' # Custom Prometheus metrics path
        prometheus.io/port_custom: '8000' # Custom Prometheus metrics port
    spec:
      containers:
        - name: spark-worker
          image: hyeneung/spark-summarizer:latest
          imagePullPolicy: Always
          command: ["/opt/spark/bin/spark-class"]
          args: ["org.apache.spark.deploy.worker.Worker", "spark://spark-master-service:7077"]
          ports:
            - containerPort: 8081 # Worker UI and Prometheus metrics
            - containerPort: 8000 # Custom Prometheus metrics
