k8s/chat-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-server-service
spec:
  type: ClusterIP
  selector:
    app: chat-server
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: chat-server
  template:
    metadata:
      labels:
        app: chat-server
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/chat/actuator/prometheus'
        prometheus.io/port: '8090'
    spec:
      containers:
        - name: chat-server
          image: hyeneung/chat-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
          readinessProbe:
            httpGet:
              path: /chat/actuator/health/readiness
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /chat/actuator/health/liveness
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: config-volume
          configMap:
            name: chat-server-config
