k8s/kafka-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
        - name: kafka-connect
          image: hyeneung/kafka-connect-cassandra-sink:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          securityContext:
            runAsUser: 0 # Run as root to bypass user lookup issues
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-service
spec:
  selector:
    app: kafka-connect
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
