k8s/user-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-server-service
spec:
  type: NodePort # for local testing; use LoadBalancer for cloud deployments
  selector:
    app: user-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-server
  template:
    metadata:
      labels:
        app: user-server
    spec:
      containers:
        - name: user-server
          image: hyeneung/user-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: user-server-config
